Replace non-jrt ModuleReference.location URLs